# RAG-evaluation

./: .gitignore  DOCUMENTATION.md  README.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  test_integration.py  test_validation.py
.github/: labeler.yml
.github/workflows/: auto-label.yml  ci.yml  codeql.yml  dependency-review.yml  pr-changelog.yml  stale.yml
examples/: basic_usage.py  evaluate.py  qualitative_eval.py  ragas_usage.py  sample_data.bib  sample_data.csv  sample_data.json  sample_qualitative_data.csv
rag_evaluation/: __init__.py  evaluator.py  qualitative_logger.py  ragas_evaluator.py
rag_evaluation/data_ingestion/: __init__.py  datatable_loader.py  jabref_loader.py
rag_evaluation/metrics/: __init__.py  context_precision.py  faithfulness.py  relevance.py  utils.py
systems/docgpt/: .env.example  .gitignore  README.md  config.yml  main.py  pyproject.toml
systems/docgpt/src/adapters/: assistant.py
systems/docgpt/src/adapters/content/: text_splitter.py  web.py
systems/docgpt/src/adapters/content/git/: code.py  wiki.py
systems/docgpt/src/app/: discord.py
systems/docgpt/src/app/api/v1/endpoints/: assistant.py
systems/docgpt/src/core/: containers.py  interaction_logger.py  prompts.py
systems/docgpt/src/domain/: assistant.py  content.py
systems/docgpt/src/domain/responses/: assistant.py
systems/docgpt/src/port/: assistant.py
tests/: conftest.py  test_data_ingestion.py  test_evaluator.py  test_metrics.py
