[project]
name = "docgpt"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "Morgan C. Nicholson", email = "morgannicholson1371@gmail.com" }]
dependencies = [
    "numpy>=2.0",
    "pydantic>=2.1.1",
    "markdown-to-json>=2.1.0",
    "pypandoc>=1.11",
    "google-genai>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "pandas>=2.0.3",
    "langchain>=0.0.352",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "bs4>=0.0.1",
    "dependency-injector>=4.41.0",
    "gitpython>=3.1.40",
    "pymongo>=4.6.0",
    "py-cord>=2.4.1",
    "tqdm>=4.66.1",
    "unstructured[md]>=0.11.6",
    "chromadb>=0.4.21",
    "langchain-postgres>=0.0.14",
    "psycopg[binary]>=3.1.0",
    "fastapi[standard]>=0.108.0",
    "uvicorn>=0.25.0",
    "sentence-transformers>=5.2.2",
]

[project.optional-dependencies]
postgres = [
    "pgvector>=0.2.3",
]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "isort>=5.12.0",
    "requests-mock>=1.11.0",
    "faker>=19.6.2",
    "mypy>=1.5.1",
    "types-requests>=2.31.0.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.mypy]
python_version = "3.11"
files = "src/**/*.py"
ignore_missing_imports = true
strict_optional = true
follow_imports = "skip"
